--- a/src/app/test-componnent/test-componnent.component.html
+++ b/src/app/test-componnent/test-componnent.component.html
@@ -1,4 +1,4 @@
 <div class="class1">
-    <p>test-componnent works! {{name}}</p>
-    <button (click)="sendMessage()">Send message</button>
+  <p>test-componnent works! {{ name }}</p>
+  <button (click)="sendMessage()">Send</button>
 </div>
